--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Full viewport height */
+    min-height: 100vh; /* Full viewport height */
     padding: 20px;
 }
 
