--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,21 @@ header {
     top: 0;
     background: #fff;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    z-index: 10;
+}
+
+header.menu-open {
+    box-shadow: none; /* Remove box shadow when menu is open */
 }
 
 .logo {
     font-size: 1.5em;
     font-weight: 700;
+}
+
+nav {
+    display: flex;
+    align-items: center;
 }
 
 nav ul {
@@ -45,12 +55,28 @@ nav a:hover {
     color: #007acc;
 }
 
+/* Hide hamburger menu button on larger screens */
+#menu-toggle {
+    display: none; /* Hide by default */
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+/* Hide hamburger icons initially */
+.menu-icon {
+    display: none;
+    width: 24px;
+    height: 24px;
+}
+
+/* Hero Section */
 .hero {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* This makes the hero section take up the full viewport height */
+    height: 100vh;
     text-align: center;
     background: #f7f7f7;
     padding: 20px;
@@ -71,7 +97,7 @@ section {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh; /* Full viewport height */
+    min-height: 100vh;
     padding: 20px;
 }
 
@@ -90,9 +116,42 @@ footer {
 
 /* Responsive Design */
 @media (max-width: 768px) {
+    nav {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        right: 0;
+        background: #fff;
+        display: none;
+        flex-direction: column;
+        gap: 10px;
+        z-index: 1; /* Place the menu below the header */
+        box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    #menu-toggle {
+        display: block; /* Show menu toggle button on mobile */
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    .open-icon {
+        display: block;
+    }
+
+    .close-icon {
+        display: none;
+    }
+
     nav ul {
         flex-direction: column;
         gap: 10px;
+    }
+
+    nav ul li:last-child{
+        padding-bottom: 10px;
     }
 
     .hero h1 {
@@ -105,5 +164,40 @@ footer {
 
     section h2 {
         font-size: 1.5em;
+    }
+
+    /* Menu opened state with animation for opening and closing */
+    nav.open {
+        display: flex;
+        animation: dropdown-open 0.3s ease-in-out forwards;
+    }
+
+    nav.close {
+        display: flex;
+        animation: dropdown-close 0.3s ease-in-out forwards;
+    }
+}
+
+/* Animation for opening the menu */
+@keyframes dropdown-open {
+    from {
+        opacity: 0;
+        transform: translateY(-20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+/* Animation for closing the menu */
+@keyframes dropdown-close {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-20px);
     }
 }
