--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,12 @@
     box-sizing: border-box;
 }
 
+/* Enable smooth scrolling behavior */
+html {
+    scroll-behavior: smooth;
+}
+
+
 body {
     font-family: 'Inter', sans-serif;
     background-color: #fff;
