--- a/css/style.css
+++ b/css/style.css
@@ -334,6 +334,10 @@ section h2 {
     position: relative;
 }
 
+.contact-icon {
+    width: 50px;
+}
+
 #contact h2::after {
     content: '';
     display: block;
@@ -379,24 +383,17 @@ section h2 {
 }
 
 .contact-info ul {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     list-style: none;
     padding: 0;
 }
 
-.contact-info ul li {
-    font-size: 1.1em;
-    color: #333;
-    margin-bottom: 10px;
+.contact-content ul li:hover {
+    transform: translateY(-5px);
 }
 
-.contact-info ul a {
-    color: #007acc;
-    text-decoration: none;
-}
-
-.contact-info ul a:hover {
-    text-decoration: underline;
-}
 
 .contact-form h3 {
     font-size: 2em;
