--- a/css/style.css
+++ b/css/style.css
@@ -482,6 +482,14 @@ section h2 {
     }
 }
 
+.paw-print {
+    opacity: 0.8;
+    position: absolute;
+    width: 20px; /* Adjust size as needed */
+    height: 20px;
+    pointer-events: none; /* Make prints unclickable */
+    transition: opacity 1s ease-out;
+}
 
 
 footer {
