--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@ section {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    padding: 20px;
+    padding: 30px;
 }
 
 section h2 {
@@ -121,7 +121,6 @@ section h2 {
 
 /* About Me Section */
 #about {
-    padding: 60px 20px;
     background: #f0f4f8; /* Soft background color for contrast */
     text-align: center;
 }
@@ -150,6 +149,13 @@ section h2 {
     align-items: center;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 30px 0px;
+    background: rgba( 255, 255, 255, 0.55 );
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur( 6.5px );
+    -webkit-backdrop-filter: blur( 6.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
     z-index: 2;
 }
 
@@ -225,6 +231,7 @@ section h2 {
     .about-content {
         grid-template-columns: 1fr;
         text-align: center;
+        padding: 20px;
     }
 
     .intro-text {
@@ -239,7 +246,6 @@ section h2 {
 
 /* Projects Section */
 #projects {
-    padding: 60px 20px;
     background: #f5f5f5; /* Light gray background for subtle contrast */
     text-align: center;
 }
@@ -276,16 +282,19 @@ section h2 {
     margin-top: 50px;
     flex: 1 1 calc(33.333% - 20px); /* Three cards per row with space for gaps */
     max-width: calc(33.333% - 20px);
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
-    background: #fff; /* Ensure a white background for each card */
-    border: 1px solid #ddd; /* Thin border for minimalistic look */
+    background: rgba( 255, 255, 255, 0.55 );
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur( 6.5px );
+    -webkit-backdrop-filter: blur( 6.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
 }
 
 .project-card img {
     width: 100%;
     height: 200px;
+    margin-top: 20px;
     object-fit: cover;
     display: block;
     transition: opacity 0.3s ease;
@@ -321,7 +330,7 @@ section h2 {
 
 /* Hover Effects */
 .project-card:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 8px 32px 0 rgba(56, 65, 185, 0.37);
     transform: translateY(-5px);
 }
 
@@ -331,7 +340,7 @@ img.peeking-cat {
     top: -9%;
     left: -50px;
     transform: scale(0.5);
-    transition: 2s;
+    transition: 1s;
     z-index: -1; /* Make sure it's behind the project card */
 }
 
@@ -339,16 +348,9 @@ img.peeking-cat {
     transform: translateY(-85px) scale(0.5);
 }
 
-/* Hover Effects */
-.project-card:hover {
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-    transform: translateY(-5px);
-}
-
 
 /* Contact Section */
 #contact {
-    padding: 60px 20px;
     background: #f0f4f8; /* Soft background color for contrast */
     text-align: center;
 }
@@ -379,10 +381,17 @@ img.peeking-cat {
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
+    padding: inherit;
     max-width: 1200px;
-    margin: 0 auto;
     gap: 40px;
     flex-wrap: wrap; /* Allow wrapping on smaller screens */
+    background: rgba( 255, 255, 255, 0.55 );
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    backdrop-filter: blur( 6.5px );
+    -webkit-backdrop-filter: blur( 6.5px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    z-index: 2;
 }
 
 .contact-info,
@@ -473,6 +482,7 @@ img.peeking-cat {
     .contact-content {
         flex-direction: column;
         align-items: center;
+        padding: 20px;
     }
 
     .contact-info,
@@ -503,7 +513,7 @@ img.peeking-cat {
 }
 
 .paw-print {
-    opacity: 0.8;
+    opacity: 0.5;
     position: absolute;
     width: 20px; /* Adjust size as needed */
     height: 20px;
