--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,10 @@ body {
     line-height: 1.6;
 }
 
+body::-webkit-scrollbar {
+    display: none;
+}
+
 header {
     display: flex;
     justify-content: space-between;
