--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ header.menu-open {
 }
 
 .logo {
-    font-size: 1.5em;
-    font-weight: 700;
+    width: 50px;
+    height: 50px;
 }
 
 nav {
@@ -90,7 +90,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: linear-gradient(135deg, #f4f4f9, #dfe3e8);
+    background: #f0f4f8;    ;
     color: #333;
 }
 
@@ -262,7 +262,7 @@ section h2 {
 
 /* Projects Section */
 #projects {
-    background: #f5f5f5; /* Light gray background for subtle contrast */
+    background: #f0f4f8; /* Light gray background for subtle contrast */
     text-align: center;
 }
 
@@ -575,7 +575,10 @@ img.peeking-cat {
 footer {
     text-align: center;
     padding: 10px 20px;
-    background: #f1f1f1;
+    background: rgba(255, 255, 255, 0.55);
+    backdrop-filter: blur(6.5px);
+    -webkit-backdrop-filter: blur(6.5px);
+    box-shadow: 0px -8px 5px rgba(0, 0, 0, 0.1);
     font-size: 0.9em;
     color: #666;
 }
