--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,71 @@ body::-webkit-scrollbar {
     display: none;
 }
 
+/* Fixed background container */
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    pointer-events: none;
+    z-index: -1; /* Ensures the background stays behind content */
+}
+
+.background:before {
+    background: radial-gradient(circle, rgba(2, 0, 36, 0) 0, #fafafa 100%);
+    position: absolute;
+    content: "";
+    z-index: 2;
+    width: 100%;
+    height: 100%;
+    top: 0;
+}
+
+.background:after {
+    content: "";
+    background-image: url("/img/grid.svg");
+    z-index: 1;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    opacity: 0.4;
+    filter: invert(1);
+}
+
+/* Main content scrollable */
+.main {
+    position: relative;
+    min-height: 100vh;
+    z-index: 0; /* Main content stays on top of the background */
+}
+
+.gradient {
+    height: fit-content;
+    z-index: 3;
+    width: 100%;
+    max-width: 640px;
+    background-image: radial-gradient(
+            at 27% 37%,
+            hsla(215, 98%, 61%, 1) 0px,
+            transparent 0%
+        ),
+        radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
+        radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
+        radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
+        radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
+        radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    filter: blur(100px) saturate(150%);
+    top: 80px;
+    opacity: 0.15;
+}
+
+
 header {
     display: flex;
     justify-content: space-between;
@@ -90,7 +155,6 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #f0f4f8;    ;
     color: #333;
 }
 
@@ -133,7 +197,6 @@ section h2 {
 
 /* About Me Section */
 #about {
-    background: #f0f4f8; /* Soft background color for contrast */
     text-align: center;
 }
 
@@ -262,7 +325,6 @@ section h2 {
 
 /* Projects Section */
 #projects {
-    background: #f0f4f8; /* Light gray background for subtle contrast */
     text-align: center;
 }
 
@@ -397,7 +459,6 @@ img.peeking-cat {
 
 /* Contact Section */
 #contact {
-    background: #f0f4f8; /* Soft background color for contrast */
     text-align: center;
 }
 
@@ -569,6 +630,7 @@ img.peeking-cat {
     height: 20px;
     pointer-events: none; /* Make prints unclickable */
     transition: opacity 1s ease-out;
+    z-index: -1;
 }
 
 
